; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/windowscodecs/extr_tiffformat.c_dump_tiff.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/windowscodecs/extr_tiffformat.c_dump_tiff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tiff_1bpp_data = type { i32 }
%struct.IFD_entry = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [47 x i8] c"tag %u: id %04x, type %04x, count %u, value %d\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c" (%d,%d,%d,%d)\0A\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @dump_tiff to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dump_tiff(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.tiff_1bpp_data*, align 8
  %6 = alloca %struct.IFD_entry*, align 8
  %7 = alloca i16*, align 8
  store i8* %0, i8** %2, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = bitcast i8* %8 to %struct.tiff_1bpp_data*
  store %struct.tiff_1bpp_data* %9, %struct.tiff_1bpp_data** %5, align 8
  %10 = load %struct.tiff_1bpp_data*, %struct.tiff_1bpp_data** %5, align 8
  %11 = bitcast %struct.tiff_1bpp_data* %10 to i8*
  %12 = load %struct.tiff_1bpp_data*, %struct.tiff_1bpp_data** %5, align 8
  %13 = getelementptr inbounds %struct.tiff_1bpp_data, %struct.tiff_1bpp_data* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i8, i8* %11, i64 %15
  %17 = bitcast i8* %16 to i16*
  %18 = load i16, i16* %17, align 2
  %19 = sext i16 %18 to i64
  store i64 %19, i64* %3, align 8
  %20 = load %struct.tiff_1bpp_data*, %struct.tiff_1bpp_data** %5, align 8
  %21 = bitcast %struct.tiff_1bpp_data* %20 to i8*
  %22 = load %struct.tiff_1bpp_data*, %struct.tiff_1bpp_data** %5, align 8
  %23 = getelementptr inbounds %struct.tiff_1bpp_data, %struct.tiff_1bpp_data* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i8, i8* %21, i64 %25
  %27 = getelementptr inbounds i8, i8* %26, i64 2
  %28 = bitcast i8* %27 to %struct.IFD_entry*
  store %struct.IFD_entry* %28, %struct.IFD_entry** %6, align 8
  store i64 0, i64* %4, align 8
  br label %29

29:                                               ; preds = %100, %1
  %30 = load i64, i64* %4, align 8
  %31 = load i64, i64* %3, align 8
  %32 = icmp ult i64 %30, %31
  br i1 %32, label %33, label %103

33:                                               ; preds = %29
  %34 = load i64, i64* %4, align 8
  %35 = load %struct.IFD_entry*, %struct.IFD_entry** %6, align 8
  %36 = load i64, i64* %4, align 8
  %37 = getelementptr inbounds %struct.IFD_entry, %struct.IFD_entry* %35, i64 %36
  %38 = getelementptr inbounds %struct.IFD_entry, %struct.IFD_entry* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load %struct.IFD_entry*, %struct.IFD_entry** %6, align 8
  %41 = load i64, i64* %4, align 8
  %42 = getelementptr inbounds %struct.IFD_entry, %struct.IFD_entry* %40, i64 %41
  %43 = getelementptr inbounds %struct.IFD_entry, %struct.IFD_entry* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 4
  %45 = load %struct.IFD_entry*, %struct.IFD_entry** %6, align 8
  %46 = load i64, i64* %4, align 8
  %47 = getelementptr inbounds %struct.IFD_entry, %struct.IFD_entry* %45, i64 %46
  %48 = getelementptr inbounds %struct.IFD_entry, %struct.IFD_entry* %47, i32 0, i32 2
  %49 = load i32, i32* %48, align 4
  %50 = load %struct.IFD_entry*, %struct.IFD_entry** %6, align 8
  %51 = load i64, i64* %4, align 8
  %52 = getelementptr inbounds %struct.IFD_entry, %struct.IFD_entry* %50, i64 %51
  %53 = getelementptr inbounds %struct.IFD_entry, %struct.IFD_entry* %52, i32 0, i32 3
  %54 = load i32, i32* %53, align 4
  %55 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0), i64 %34, i32 %39, i32 %44, i32 %49, i32 %54)
  %56 = load %struct.IFD_entry*, %struct.IFD_entry** %6, align 8
  %57 = load i64, i64* %4, align 8
  %58 = getelementptr inbounds %struct.IFD_entry, %struct.IFD_entry* %56, i64 %57
  %59 = getelementptr inbounds %struct.IFD_entry, %struct.IFD_entry* %58, i32 0, i32 0
  %60 = load i32, i32* %59, align 4
  %61 = icmp eq i32 %60, 258
  br i1 %61, label %62, label %97

62:                                               ; preds = %33
  %63 = load %struct.IFD_entry*, %struct.IFD_entry** %6, align 8
  %64 = load i64, i64* %4, align 8
  %65 = getelementptr inbounds %struct.IFD_entry, %struct.IFD_entry* %63, i64 %64
  %66 = getelementptr inbounds %struct.IFD_entry, %struct.IFD_entry* %65, i32 0, i32 2
  %67 = load i32, i32* %66, align 4
  %68 = icmp sgt i32 %67, 2
  br i1 %68, label %69, label %97

69:                                               ; preds = %62
  %70 = load %struct.tiff_1bpp_data*, %struct.tiff_1bpp_data** %5, align 8
  %71 = bitcast %struct.tiff_1bpp_data* %70 to i8*
  %72 = load %struct.IFD_entry*, %struct.IFD_entry** %6, align 8
  %73 = load i64, i64* %4, align 8
  %74 = getelementptr inbounds %struct.IFD_entry, %struct.IFD_entry* %72, i64 %73
  %75 = getelementptr inbounds %struct.IFD_entry, %struct.IFD_entry* %74, i32 0, i32 3
  %76 = load i32, i32* %75, align 4
  %77 = sext i32 %76 to i64
  %78 = getelementptr inbounds i8, i8* %71, i64 %77
  %79 = bitcast i8* %78 to i16*
  store i16* %79, i16** %7, align 8
  %80 = load i16*, i16** %7, align 8
  %81 = getelementptr inbounds i16, i16* %80, i64 0
  %82 = load i16, i16* %81, align 2
  %83 = sext i16 %82 to i32
  %84 = load i16*, i16** %7, align 8
  %85 = getelementptr inbounds i16, i16* %84, i64 1
  %86 = load i16, i16* %85, align 2
  %87 = sext i16 %86 to i32
  %88 = load i16*, i16** %7, align 8
  %89 = getelementptr inbounds i16, i16* %88, i64 2
  %90 = load i16, i16* %89, align 2
  %91 = sext i16 %90 to i32
  %92 = load i16*, i16** %7, align 8
  %93 = getelementptr inbounds i16, i16* %92, i64 3
  %94 = load i16, i16* %93, align 2
  %95 = sext i16 %94 to i32
  %96 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32 %83, i32 %87, i32 %91, i32 %95)
  br label %99

97:                                               ; preds = %62, %33
  %98 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  br label %99

99:                                               ; preds = %97, %69
  br label %100

100:                                              ; preds = %99
  %101 = load i64, i64* %4, align 8
  %102 = add i64 %101, 1
  store i64 %102, i64* %4, align 8
  br label %29

103:                                              ; preds = %29
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
